fix(frontend): Add a row gap to the navbar elements

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -145,6 +145,7 @@ textarea {
 
 .navbar {
   background: var(--nav-color);
+  row-gap: 1rem;
 }
 
 .navbar--title:visited {
